# opengl-learn

./: CMakeLists.txt  README.md
includes/learnopengl/: camera.h  filesystem.h  shader_m.h  shader_s.h
src/1.getting_started/1.1.hello_window/: hello_window.cpp
src/1.getting_started/1.2.hello_window_clear/: hello_window_clear.cpp
src/1.getting_started/2.1.hello_triangle/: hello_triangle.cpp
src/1.getting_started/2.1.hello_triangle2/: hello_triangle.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: hello_triangle_indexed.cpp
src/1.getting_started/2.2.hello_triangle_indexed2/: hello_triangle_indexed.cpp
src/1.getting_started/3.1.shaders_uniform/: shaders_uniform.cpp
src/1.getting_started/3.1.shaders_uniform2/: shaders_uniform.cpp
src/1.getting_started/3.2.shaders_interpolation/: shaders_interpolation.cpp
src/1.getting_started/3.2.shaders_interpolation2/: shaders_interpolation.cpp
src/1.getting_started/3.3.shaders_class/: 3.3.shader.vs  shaders_class.cpp
src/1.getting_started/3.3.shaders_class2/: 3.3.shader2.vs  shaders_class.cpp
src/1.getting_started/4.1.textures/: textures.cpp
src/1.getting_started/4.1.textures2/: 4.1.texture2.fs  textures.cpp
src/1.getting_started/4.2.textures_combined/: 4.2.texture.fs  textures_combined.cpp
src/1.getting_started/4.2.textures_combined2/: 4.2.texture2.vs  textures_combined.cpp
src/1.getting_started/5.1.transformations/: 5.1.transform.fs  5.1.transform.vs  transformations.cpp
src/1.getting_started/6.1.coordinate_systems/: 6.1.coordinate_systems.vs  coordinate_systems.cpp
(+19 files in other folders)
